WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238467
Don't send sync RemoteMediaPlayerProxy messages that we know will fail
https://bugs.webkit.org/show_bug.cgi?id=238467
Summary
Don't send sync RemoteMediaPlayerProxy messages that we know will fail
Eric Carlson
Reported
2022-03-28 13:55:21 PDT
Don't send sync RemoteMediaPlayerProxy messages that we know will fail
Attachments
Patch
(3.53 KB, patch)
2022-03-28 14:05 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.44 KB, patch)
2022-03-28 16:27 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2022-03-28 13:55:47 PDT
rdar://86662565
Eric Carlson
Comment 2
2022-03-28 14:05:16 PDT
Created
attachment 455950
[details]
Patch
Eric Carlson
Comment 3
2022-03-28 16:27:38 PDT
Created
attachment 455968
[details]
Patch for landing
Eric Carlson
Comment 4
2022-03-29 10:18:13 PDT
The failing iOS tests are unrelated.
EWS
Comment 5
2022-03-29 11:16:52 PDT
Committed
r292044
(
248984@main
): <
https://commits.webkit.org/248984@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 455968
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug